# detfp

./: CMakeLists.txt  IFloat64.h  README.md  benchmark.cc  f64Sum.cc  f64Sum.h  f64math.h  if64AllReduceSum.cc  if64Sum.cc  if64math.h  if64mpi.h  main.cc  testlzcnt.c
scripts/: runTest.sh
src/: IFloat64.h  benchmark.cc  debugadd.cc  f64Sum.cc  f64math.h  if64AllReduceSum.cc  if64Sum.cc  if64math.h  if64mpi.h  mpibenchmark.cc  testlzcnt.c
